name:                spoty
version:             0.1.0.0
synopsis:            Spotify web API wrapper
description:         TBD
license:             BSD3
license-file:        LICENSE
author:              David Nilsson
maintainer:          nilsson.dd+code@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Utils.Spoty, Utils.Spoty.Types
  build-depends:
                       aeson                 >= 0.7.0.6   && < 0.8,
                       base                  >= 4.6       && < 4.7,
                       bytestring            >= 0.10      && < 0.11,
                       lens                  >= 4         && < 4.4,
                       pipes                 >= 4.1       && < 4.2,
                       text                  >= 0.11      && < 1.2,
                       unordered-containers  >= 0.2.3     && < 0.3,
                       wreq                  >= 0.1       && < 0.2

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
