name:                spoty
version:             0.1.0.2
synopsis:            Spotify web API wrapper
description:         
  Web API <https://developer.spotify.com/web-api/> wrapper powered by lens and pipes, allowing easy access to public endpoints.
  Does not have any external dependencies nor requirements regarding app registration.
  .
  * Paging is handled transparently using pipes
  .
  * All data types are navigated using lenses
  .
  All public endpoints, with multi-get versions excluded, are implemented.
  .

  > > :set -XOverloadedStrings
  > > :m +Control.Lens Utils.Spoty
  > > Just artist <- fetchOne (searchArtist "avicii")      -- assume at least one match
  > > popular <- getArtistTop (view spotifyID artist) "SE" -- retrieve the most popular tracks in Sweden
  > > mapM_ (print . view name) popular                    -- print the corresponding names
  > "Hey Brother"
  > "Addicted To You"
  > "Wake Me Up"
  > ...
  .
  Please read the README for details.

license:             BSD3
license-file:        LICENSE
author:              David Nilsson
maintainer:          nilsson.dd+code@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/davnils/spoty
bug-reports:         https://github.com/davnils/spoty/issues
extra-source-files:  Examples/Search.hs Examples/Albums.hs CHANGELOG

library
  exposed-modules:     Utils.Spoty, Utils.Spoty.Types
  build-depends:
                       aeson,
                       base,
                       bytestring,
                       lens,
                       lens-aeson,
                       pipes,
                       text,
                       unordered-containers,
                       wreq

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

source-repository head
  type: git
  location: https://github.com/davnils/spoty.git
